# modular-architecture-python

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  notes  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/module/shared/config/: module_component.py
app/module/shared/module/config/: module_component.py
app/module/shared/module/persistence/sqlalchemy/: alembic_runner.py  base_dao.py  base_dto.py  base_model.py  has_from_model.py  module.py  module_engine.py  schema_factory.py  session.py  sql_alchemy_module.py
app/module/template/: alembic.ini  module.py
app/module/template/__test__/: conftest.py  test_create_controller.py  test_list_controller.py
app/module/template/core/service/: create_template.py
app/module/template/core/usecase/: create_template.py  list_templates.py
app/module/template/http/rest/controller/: create.http  list.http  template.http  template_controller.py
app/module/template/infra/db/: engine.py
app/module/template/migrations/: env.py  script.py.mako
app/module/template/migrations/versions/: f11acf9f9d9a_init_template_module.py
app/module/template/persistence/alembic/: alembic.ini  env.py
app/module/template/persistence/dao/: template.py
app/module/template/persistence/dto/: template.py
app/module/template/persistence/model/: template.py
app/module/template/utils/: di_container.py
(+7 files in other folders)
