[project]
name = "backend"
version = "0.1.0"
description = "Backend Python tipado"
requires-python = ">=3.11"

# =========================
# BLACK (formatation)
# =========================
[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

# =========================
# RUFF (lint + imports)
# =========================
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # upgrade syntax
    "B",   # bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =========================
# PYRIGHT (typing)
# =========================
[tool.pyright]
typeCheckingMode = "strict"

reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownArgumentType = "error"

reportMissingTypeStubs = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

venvPath = "."
venv = ".venv"

include = ["src"]

# =========================
# PIP TOOLS (manage requirements files)
# =========================
[tool.pip-tools]
generate-hashes = true

# =========================
# Editable mode (for development)
# =========================
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app/module"]
include = ["template*"] 